# malaria-maps

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  metadata.yaml  pyproject.toml  railway.toml
.github/workflows/: weekly-collect.yml
data/: malaria.db
plugins/: cache_headers.py  locate_endpoint.py  robots.py
reference/: country_iso3.csv  fda_rules.json
src/malaria_tracker/: __init__.py  collect.py  config.py  db.py  geocode.py  locate.py  models.py  parse.py  schema.sql
src/malaria_tracker/sources/: __init__.py  cdc_travel.py
tests/: test_cdc_travel.py  test_collect.py  test_geocode.py  test_locate.py  test_parse.py  test_robots.py
tests/fixtures/: cdc_yellowfever_raw.txt
tools/: build_crosswalk.py
web/: app.js  index.html
