[project]
name = "malaria-tracker"
version = "0.1.0"
description = "Tracks malaria endemic-region data for blood-donor geographic deferral, built from CDC/FDA primary sources."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pydantic>=2.7",
    "zstandard>=0.22",
    "datasette>=0.64",
    "datasette-render-html>=1.0",
    "datasette-hashed-urls>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/malaria_tracker"]

[project.scripts]
malaria-collect = "malaria_tracker.collect:main"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["_quarantine"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
